# lattice

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  SPEC.md  TASKS.md  testbench.json
docs/: config-reference.md
examples/: dadjokes.json  github.yaml  httpbin.yaml  ls.yaml
src/: error.rs  lib.rs  main.rs
src/config/: interpolate.rs  load.rs  mod.rs
src/engine/: body.rs  command.rs  mod.rs  request.rs  response.rs  validate.rs  value.rs
src/exec/: auth.rs  cli.rs  http.rs  mod.rs
src/mcp/: dispatcher.rs  mod.rs  result.rs  server.rs
tests/: check_mode.rs  cli_integration.rs  config_parse.rs  gen_check.rs  gen_emit.rs  gen_roundtrip.rs  http_integration.rs  http_transport.rs  mcp_roundtrip.rs  mcp_tracer.rs  stdio_purity.rs
tests/fixtures/: example.json  example.yaml  script.sh  stdio.yaml
