[package]
name = "lattice"
version = "0.1.0"
edition = "2021"
description = "Config-driven MCP shell that turns REST APIs and CLI tools into MCP servers"
license = "MIT"

[[bin]]
name = "lattice"
path = "src/main.rs"

[lib]
name = "lattice"
path = "src/lib.rs"

[dependencies]
# Official Rust MCP SDK. `transport-io` adds the stdio() transport; the default
# `server` feature pulls in transport-async-rw used for in-memory/duplex transports.
rmcp = { version = "1", features = ["transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "process", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# The in-process test client needs rmcp's `client` feature.
rmcp = { version = "1", features = ["client"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "sync"] }
anyhow = "1"
serde_json = "1"
