[package]
name = "lattice"
version = "0.1.0"
edition = "2021"
description = "Config-driven MCP shell that turns REST APIs and CLI tools into MCP servers"
license = "MIT"

[[bin]]
name = "lattice"
path = "src/main.rs"

[lib]
name = "lattice"
path = "src/lib.rs"

[dependencies]
# Official Rust MCP SDK. `transport-io` adds the stdio() transport; the default
# `server` feature pulls in transport-async-rw used for in-memory/duplex transports.
rmcp = { version = "1", features = ["transport-io"] }
# HTTP client for the executor. rustls (no OpenSSL); default features off keeps the
# footprint lean (no native-tls). `json` is kept for ergonomics/future use.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "process", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Maintained fork of the (archived) serde_yaml crate.
serde_norway = "0.9"
# JSON Schema validation (config `check` + runtime arg validation, T17). Default
# features (remote/file $ref resolution via reqwest) disabled: SSRF-safe, lighter.
jsonschema = { version = "0.46", default-features = false }
# Templating for `{{ ... }}` value expressions. `fuel` bounds template execution
# (a loop can be driven by model-supplied input).
minijinja = { version = "2", features = ["fuel"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# The in-process test client needs rmcp's `client` feature.
rmcp = { version = "1", features = ["client"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "sync"] }
anyhow = "1"
serde_json = "1"
# Mock HTTP server for executor integration tests.
wiremock = "0.6"
